--- a/backend/Projeto-3/src/main/resources/application.properties
+++ b/backend/Projeto-3/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=Projeto-3
+
+
+# Configuração do PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/Projeto3
+spring.datasource.username=luimanso
+spring.datasource.password=luii2244
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.tomcat.max-wait=10000
+spring.datasource.tomcat.max-active=50
+spring.datasource.tomcat.max-idle=25
+spring.datasource.tomcat.min-idle=5
+
+
+# Habilita o log de SQL (opcional para ver as queries no console)
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
