Criação da conta admin (localizada em UsuarioService.java)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=backend
 
 
 # Configurações do PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/Projeto3
-spring.datasource.username=luimanso
-spring.datasource.password=luii2244
+# spring.datasource.url=jdbc:postgresql://localhost:5432/Projeto3
+# spring.datasource.username=luimanso
+# spring.datasource.password=luii2244
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
