atualizacoes no backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,18 +1,16 @@
 spring.application.name=backend
 
 # Configurações do PostgreSQL
-# spring.datasource.url=jdbc:postgresql://localhost:5432/Projeto3
-# spring.datasource.username=luimanso
-# spring.datasource.password=luii2244
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASS}
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/projeto3
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-# Configuração para logar as consultas SQL (opcional)
+# Configuração para executar data.sql
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+
+# Configuração para logar as consultas SQL
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
-# Configurações de pool de conexão (opcional)
-spring.datasource.hikari.maximum-pool-size=10
