feat: Mover pasta backend para dentro do projeto principal
- Reorganizar estrutura do projeto com backend integrado
- Atualizar .gitignore para arquivos específicos do backend
- Manter funcionalidade completa do Spring Boot
- Backend testado e funcionando na nova localização

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,10 @@
 
 # Ignorar arquivos do backend
-/target/
-/*.log
-/*.class
+backend/target/
+backend/*.log
+backend/*.class
+backend/.mvn/wrapper/maven-wrapper.jar
+backend/.DS_Store
 
 # Ignorar arquivos do frontend
 /node_modules/
