--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,6 +13,7 @@ spring.jpa.show-sql=true
 # Configurações de Upload
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+app.upload.dir=uploads
 
 # Configurações de CORS
 spring.mvc.cors.allowed-origins=http://localhost:3000
